# runified

./: .gitignore  .neckless  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ng-nodejs-ci.yaml  patch-package.json.js  release.yaml
go/: Dockerfile  README.md  go.mod  go.sum  main.go
go/app/: api.go  api_handler.go  api_handler_test.go  app.go  app_test.go  cli_config.go  cli_config_test.go
go/kv/: key_value_store_test.go  wrap_kv.go
go/sdk/: request_context.go  request_context_test.go  sdk.go  sdk_test.go
go/testutils/: api.go  api_handler.go  app.go  http_client.go  log_collector.go  response_writer.go  sdk_http_handler.go  sys_abstraction.go  time.go
go/types/: currency_exchange.go  error_msg.go  http_client.go  http_handler.go  http_server.go  key_value.go  sdk.go  serde.go  sys_abstraction.go  time.go  user.go
go/utils/: counter.go  counter_test.go  system.go
rust/: Cargo.toml
rust/src/: main.rs  server.rs
rust/src/app/: api.rs  api_test.rs  app.rs  app_test.rs  cli_config.rs  mod.rs
rust/src/types/: api.rs  api_handler.rs  app.rs  app_handler.rs  config.rs  ctx_handler.rs  error_msg.rs  http_client.rs  http_handler.rs  http_server.rs  key_value.rs  logger.rs  mod.rs  sdk.rs  serde.rs  system_abstraction.rs
schema/: error.schema.json  price.schema.json  raw.schema.json  runified-req.schema.json  runified-res.schema.json  source.schema.json
ts/: .eslintignore  .npmignore  .prettierignore  eslint.config.mjs  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
ts/smoke/: .gitignore  (+1 more)
(+187 files in other folders)
