[package]
name = "runified"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.26", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.2"
clap = "4.3.3"
chrono = "0.4.26"


[dev-dependencies]
pretty_assertions = "1"
